--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             tells a sweet story.</p>
                     </div>
                 </div>
-                
+
 
         </section>
 
@@ -77,6 +77,29 @@
                 </section>
                 <br><br>
                 <!-- carousel -->
+                <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img height="500px" width="300px" src="./public/pictures/pic1.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img height="500px" width="300px" src="./public/pictures/pic2.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img height="5  00px" width="300px" src="./public/pictures/pic3.jpg" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
 
                 <!-- container -->
                 <div class="container">
@@ -85,7 +108,7 @@
                             <div class="card">
                                 <img height="300px" width="150px" src="./public/pictures/cakke.jpg" alt="cakes"
                                     class="card-img-top">
-                                <div class="card-body">
+                                <div class="card-body">f
                                     <h5 class="card-title"> <b>Chocolat cake</b></h5>
                                     <p class="card-text">Lorem ipsum dolor sit amet.</p>
                                     <button type="button" class="btn btn-outline-secondary">Buy now!</button>
@@ -166,7 +189,11 @@
         <section>
             <div class="beige">
                 <br><br>
-                <div> <center><h1><b>How to order ? </b></h1></center></div>
+                <div>
+                    <center>
+                        <h1><b>How to order ? </b></h1>
+                    </center>
+                </div>
                 <br><br>
             </div>
         </section>
@@ -192,7 +219,7 @@
                     </div>
                 </div>
             </div>
-</footer>
+        </footer>
 
 
 
